--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,14 @@
-<script>
-    function getState(){
-
-    }
-</script>
 <h1 class="display-2 text-center">PiCar Marro</h1>
+<div>
+    
 
+    Encendido: 
+    {{ results }}
+
+    
+
+    
+</div>
 <div class="container">
   <div class="jumbotron">
     <div class="container algin-center">
@@ -17,9 +21,11 @@
                 </label>
             </div>
             <div class="col-sm">
+                
                 <div class="d-flex flex-row-reverse">
-                    <span class="badge badge-pill badge-success m-2">Running</span>
-                    <span class="badge badge-pill badge-danger m-2">Stopped</span>
+                     
+                    <span class="badge badge-pill badge-dark m-2">Estado:{{estado}}</span>
+                    <!-- span class="badge badge-pill badge-danger m-2">Stopped</span> -->
                 </div>
             </div>
         </div>
@@ -33,16 +39,19 @@
         <div class="container algin-center">
             <div class="row">
                 <div class="col-sm">
-                    1
+                    {{ r1 }}
                 </div>
                 <div class="col-sm">
-                    2
+                    {{ r2 }}
                 </div>
                 <div class="col-sm">
-                    3
+                    {{ r3 }}
                 </div>
                 <div class="col-sm">
-                    4
+                    {{ r4 }}
+                </div>
+                <div class="col-sm">
+                    {{ r5 }}
                 </div>
             </div>
         </div>
@@ -53,7 +62,7 @@
     <div class="jumbotron">
         <h1 class="h3">Current Action</h1>
         <div>
-
+            <!--{{mov}}-->
         </div>
    </div>
 </div>
@@ -67,18 +76,21 @@
    </div>
 </div>
 
+
 <script>
     function getVal(elem){
         console.log(elem.checked);
         var xhr = new XMLHttpRequest();
-        xhr.open('POST', 'encendido', true);
+        
+        xhr.open('POST', '/encendido', true);
+        xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
         if(elem.checked){
             console.log("ON");
-            xhr.send(true);
+            xhr.send("boton=true");
             
         } else {
             console.log("OFF");
-            xhr.send(false);
+            xhr.send("boton=false");
         }
     }
 
