--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,8 +26,16 @@
                     <span class="slider round"></span>
                 </label>
                 {{/if}}
+            </div>
+            <div>
+                <a href="#" class="arrow round center">⭕</a>
+                <a href="#" class="arrow round up">🖕</a>
+                <a href="#" class="arrow round down">👇</a>
+
                 
 
+                <a href="#" class="arrow round left">👈</a>
+                <a href="#" class="arrow round right">👉</a>
             </div>
             <div class="col-sm">
                 
@@ -47,7 +55,7 @@
         <div class="container algin-center">
             <center><div class="row">
                 <div class="col-sm">
-                    {{{ r1}}}
+                    {{{ r1 }}}
                 </div>
                 <div class="col-sm">
                     {{{ r2 }}}
@@ -89,7 +97,7 @@
 <div class="container">
     <div class="jumbotron">
         <h1 class="h3">Track Trace</h1>
-        {{trace}}
+        <!--{{trace}}-->
    </div>
 </div>
 
