--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -17,6 +17,52 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <style>
+        .up {
+            position: relative;
+            top: -50px;
+            left: 70px;
+        }
+        .down {
+            position: relative;
+            top: 50px;
+            left:15px;
+        }
+        .left {
+            position: relative;
+            left: -100px;
+        }
+        .right {
+            position: relative;
+            right: 50px;
+        }
+        }
+        .center {
+            position: relative;
+            right: -100px;
+            top: -40px;
+        }
+
+        
+        a {
+            text-decoration: none;
+            display: inline-block;
+            padding: 8px 16px;
+        }
+
+        a:hover {
+            background-color: rgb(30, 137, 187);
+            color: black;
+        }
+
+        .arrow {
+            font-size: 20px;
+            background-color: #4CAF50;
+            color: white;
+        }
+        .round {
+            border-radius: 40%;
+        }
+
         .switch {
         position: relative;
         display: inline-block;
