--- a/views/index.hbs
+++ b/views/index.hbs
@@ -77,7 +77,7 @@
                         </div>
                 </div>
                 <div class="col-sm">
-                    <h1 class="h3">Last movements</h1>
+                    <h1 class="h3">Últimos movimientos registrados</h1>
                         {{#each trace}}
                             <p>{{#each this}}
                                 {{{this}}} 
@@ -90,7 +90,6 @@
         <br></br>
         <br></br>        
    </div>
-</div>
 
 
 
