--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,15 +10,16 @@
                     <label class="switch">
                     <input type="checkbox" id="io" onchange="getVal({{encendido}})" checked={{encendido}}>
                     <span class="slider round"></span>
-                </label>
+                    </label>
                 {{else}}
                     <label class="switch">
                     <input type="checkbox" id="io" onchange="getVal({{encendido}})">
                     <span class="slider round"></span>
-                </label>
+                    </label>
                 {{/if}}
-                <div>
-                <a href="#" class="arrow round center">⭕</a>
+            </div>
+            <div class="col-sm">
+                <a href="#" class="arrow round centro">⭕</a>
                 <a href="#" class="arrow round up">🖕</a>
                 <a href="#" class="arrow round down">👇</a>
 
@@ -27,7 +28,6 @@
                 <a href="#" class="arrow round left">👈</a>
                 <a href="#" class="arrow round right">👉</a>
             </div>
-            </div>
             <div class="col-sm">
                 
                 <div class="d-flex flex-row-reverse">
@@ -35,7 +35,7 @@
                     <!-- span class="badge badge-pill badge-danger m-2">Stopped</span> -->
                 </div>
             </div>
-        </div>
+            </div></div></div>
     </div>
     </div>
 </div>
