--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -36,9 +36,9 @@
             right: 50px;
         }
         }
-        .center {
+        .centro {
             position: relative;
-            right: -100px;
+            right: 100px;
             top: -40px;
         }
 
